@startuml diagrama-er
!theme plain
skinparam backgroundColor #FAFAFA
skinparam linetype ortho

title HealthSys Distribuído – Diagrama Entidade-Relacionamento

entity "USUARIOS" as usuarios {
    * id : BIGSERIAL <<PK>>
    --
    * nome : VARCHAR(100)
    * perfil : VARCHAR(50)
    * email : VARCHAR(150) <<UK>>
    * senha : VARCHAR(255)
    * ativo : BOOLEAN
    * created_at : TIMESTAMP
}

entity "PACIENTES" as pacientes {
    * id : BIGSERIAL <<PK>>
    --
    * nome : VARCHAR(100)
    * data_nascimento : DATE
    sexo : VARCHAR(20)
    telefone : VARCHAR(20)
    cpf : VARCHAR(14) <<UK>>
    email : VARCHAR(150)
    endereco : VARCHAR(255)
    * created_at : TIMESTAMP
}

entity "VACINAS" as vacinas {
    * id : BIGSERIAL <<PK>>
    --
    * id_paciente : BIGINT <<FK>>
    * nome_vacina : VARCHAR(100)
    * data_aplicacao : DATE
    lote : VARCHAR(50)
    observacoes : TEXT
}

entity "PRONTUARIOS" as prontuarios {
    * id : BIGSERIAL <<PK>>
    --
    * id_paciente : BIGINT <<FK>> <<UK>>
    * data_criacao : TIMESTAMP
    historico_clinico : TEXT
    observacoes_gerais : TEXT
}

entity "ATENDIMENTOS" as atendimentos {
    * id : BIGSERIAL <<PK>>
    --
    * id_paciente : BIGINT <<FK>>
    id_prontuario : BIGINT <<FK>>
    * id_usuario : BIGINT <<FK>>
    * tipo_atendimento : VARCHAR(50)
    * data : TIMESTAMP
    observacoes : TEXT
    * status : VARCHAR(20)
}

entity "TRIAGENS" as triagens {
    * id : BIGSERIAL <<PK>>
    --
    * id_paciente : BIGINT <<FK>>
    * id_usuario : BIGINT <<FK>>
    id_atendimento : BIGINT <<FK>>
    * sintomas : TEXT
    * nivel_risco : VARCHAR(20)
    * status : VARCHAR(20)
    * data_triagem : TIMESTAMP
}

entity "CONSULTAS" as consultas {
    * id : BIGSERIAL <<PK>>
    --
    * id_prontuario : BIGINT <<FK>>
    * id_usuario : BIGINT <<FK>>
    * data_consulta : TIMESTAMP
    descricao : TEXT
    conduta : TEXT
    diagnostico : VARCHAR(255)
}

entity "EXAMES" as exames {
    * id : BIGSERIAL <<PK>>
    --
    * id_prontuario : BIGINT <<FK>>
    * tipo_exame : VARCHAR(100)
    * data_exame : TIMESTAMP
    resultado : TEXT
    arquivo_url : VARCHAR(500)
}

entity "MEDICAMENTOS" as medicamentos {
    * id : BIGSERIAL <<PK>>
    --
    * id_consulta : BIGINT <<FK>>
    * nome : VARCHAR(100)
    dosagem : VARCHAR(50)
    frequencia : VARCHAR(50)
    duracao : VARCHAR(50)
}

entity "NOTIFICACOES" as notificacoes {
    * id : BIGSERIAL <<PK>>
    --
    * id_usuario : BIGINT <<FK>>
    * titulo : VARCHAR(200)
    mensagem : TEXT
    tipo : VARCHAR(50)
    * data_envio : TIMESTAMP
    * lida : BOOLEAN
    * status : VARCHAR(20)
}

' ─── Relacionamentos ──────────────────────────────────────
pacientes   ||--o{ vacinas       : "recebe"
pacientes   ||--||  prontuarios  : "possui"
pacientes   ||--o{ atendimentos  : "realiza"
pacientes   ||--o{ triagens      : "passa por"

usuarios    ||--o{ atendimentos  : "registra"
usuarios    ||--o{ triagens      : "realiza"
usuarios    ||--o{ consultas     : "realiza"
usuarios    ||--o{ notificacoes  : "recebe"

prontuarios ||--o{ atendimentos  : "atualizado em"
prontuarios ||--o{ consultas     : "registra"
prontuarios ||--o{ exames        : "registra"

atendimentos ||--o{ triagens     : "origina"
consultas    ||--o{ medicamentos : "prescreve"

@enduml
